fix: remove backend

--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -207,7 +207,7 @@ jobs:
         
       - name: Setup Meson
         run: |
-          meson setup --backend vs --vsenv build
+          meson setup --vsenv build
         shell: cmd
 
       # - run: where gcc
