--- a/RTEA.vcxproj
+++ b/RTEA.vcxproj
@@ -618,6 +618,7 @@
     <ClInclude Include="Resources\Credits.h" />
     <ClInclude Include="Resources\resource.h" />
     <ClInclude Include="System\Atom.h" />
+    <ClInclude Include="System\Base64\base64.h" />
     <ClInclude Include="System\Constants.h" />
     <ClInclude Include="System\Controller.h" />
     <ClInclude Include="System\Entity.h" />
@@ -847,6 +848,7 @@
     <ClCompile Include="Menus\TitleScreen.cpp" />
     <ClCompile Include="Menus\InventoryMenuGUI.cpp" />
     <ClCompile Include="System\Atom.cpp" />
+    <ClCompile Include="System\Base64\base64.cpp" />
     <ClCompile Include="System\Controller.cpp" />
     <ClCompile Include="System\Entity.cpp" />
     <ClCompile Include="System\GenericSavedData.cpp" />
