--- a/RTEA.vcxproj.filters
+++ b/RTEA.vcxproj.filters
@@ -588,6 +588,9 @@
     <ClInclude Include="System\StackWalker\StackWalker.h">
       <Filter>System\StackWalker</Filter>
     </ClInclude>
+    <ClInclude Include="System\RTEStackTrace.h">
+      <Filter>System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="System\Box.cpp">
@@ -1133,6 +1136,9 @@
     </ClCompile>
     <ClCompile Include="System\StackWalker\StackWalker.cpp">
       <Filter>System\StackWalker</Filter>
+    </ClCompile>
+    <ClCompile Include="System\RTEStackTrace.cpp">
+      <Filter>System</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
