I accidentally (followup to 9eef30e6ad4f606011e08ce587d29fdae0409f00)

--- a/System/meson.build
+++ b/System/meson.build
@@ -34,7 +34,7 @@ sources += files(
 
 if host_machine.system() == 'windows'
   sources += files(
-	'StackWalker/StackWalker.cpp'
-    'RTEStackTrace.cpp'
+	'StackWalker/StackWalker.cpp',
+    'RTEStackTrace.cpp',
   )
 endif
