--- a/System/meson.build
+++ b/System/meson.build
@@ -35,8 +35,8 @@ imgui_sources = files(
 'imgui/imgui_demo.cpp',
 'imgui/imgui_draw.cpp',
 'imgui/imgui_impl_opengl3.cpp',
-'imgui/imgui_impl_sdl.cpp',
-'imgui/imgui_impl_sdlrenderer.cpp',
+'imgui/imgui_impl_sdl2.cpp',
+'imgui/imgui_impl_sdlrenderer2.cpp',
 'imgui/imgui_tables.cpp',
 'imgui/imgui_widgets.cpp',
 )
