build: specify BundleDevelopmentRegion in `plist` file

--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -16,5 +16,7 @@
 	<string>CortexCommand</string>
 	<key>CFBundleShortVersionString</key>
 	<string>5.1.0</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en</string>
 </dict>
 </plist>
