build: package app `Info.plist` and icon file during meson builds

--- a/Resources/meson.build
+++ b/Resources/meson.build
@@ -9,4 +9,7 @@ elif host_machine.system() == 'windows'
     windows = import('windows')
     winrc = windows.compile_resources('RTEA.rc', depend_files: files('resource.h', 'ccicon.ico', 'ccicon32.ico'), include_directories: '.')
     sources += winrc
+elif host_machine.system() == 'darwin'
+    install_data('ccicon.icns', install_dir : 'Contents/Resources')
+    install_data('Info.plist', install_dir : 'Contents')
 endif
