build!: add a post-install script to bundle macOS dynamic libs
Update CI to install required tools via Homebrew.
Call the new bundler script via the `/Resources/` meson build script, providing it with the required executable name.

BREAKING CHANGE: Adds `dylibbundler` as a macOS dependency (install only)

--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -125,7 +125,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          brew install pkg-config tbb sdl2 minizip lz4 flac luajit lua@5.1 libpng gcc@12 ninja meson
+          brew install pkg-config tbb sdl2 minizip lz4 flac luajit lua@5.1 libpng gcc@12 ninja meson dylibbundler
 
       - name: Setup Meson
         env:
