build: set app bundle `Info.plist` keys when building
Meson builds now populate the GameVersion and executable name.

Expose meson `project_version` to file configuration data

--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -13,9 +13,9 @@
 	<key>CFBundleDisplayName</key>
 	<string>Cortex Command</string>
 	<key>CFBundleExecutable</key>
-	<string>CortexCommand</string>
+	<string>@EXENAME@</string>
 	<key>CFBundleShortVersionString</key>
-	<string>5.1.0</string>
+	<string>@game_version@</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 </dict>
