--- a/meson.build
+++ b/meson.build
@@ -157,7 +157,9 @@ luabind_proj = subproject('luabind-0.7.1')
 luabind_dep = dependency('luabind')
 raknet_proj = subproject('RakNet')
 raknet_dep = dependency('RakNet')
-deps += [allegro_dep, loadpng_dep, raknet_dep, boost_dep]
+tracy_proj = subproject('tracy')
+tracy_dep = dependency('tracy')
+deps += [allegro_dep, loadpng_dep, raknet_dep, boost_dep, tracy_dep]
 
 #### Sources Setup ####
 pch = meson.current_source_dir()/'System/StandardIncludes.h'
