--- a/RTEA.vcxproj.filters
+++ b/RTEA.vcxproj.filters
@@ -37,6 +37,12 @@
     <Filter Include="System\StackWalker">
       <UniqueIdentifier>{a8668dc1-51c5-418d-91bf-7ee92f008cb1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="external">
+      <UniqueIdentifier>{c24dc7b0-ca0d-4709-a41b-c44fe77bd6ef}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="external\tracy">
+      <UniqueIdentifier>{21b72644-6ffe-4931-909e-130c40fd684f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="System\Box.h">
@@ -592,6 +598,7 @@
       <Filter>System</Filter>
     </ClInclude>
     <ClInclude Include="Menus\SaveLoadMenuGUI.h" />
+    <ClInclude Include="System\Base64\base64.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="System\Box.cpp">
@@ -1142,6 +1149,10 @@
       <Filter>System</Filter>
     </ClCompile>
     <ClCompile Include="Menus\SaveLoadMenuGUI.cpp" />
+    <ClCompile Include="System\Base64\base64.cpp" />
+    <ClCompile Include="external\sources\tracy\public\TracyClient.cpp">
+      <Filter>external\tracy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\ccicon.ico">
