fix tracy on meson

--- a/Managers/meson.build
+++ b/Managers/meson.build
@@ -21,7 +21,7 @@ sources += files(
 'UInputMan.cpp',
 'WindowMan.cpp'
 )
-luaman_cpp_args = []
+luaman_cpp_args = preprocessor_flags
 defaults_override = []
 if compiler.get_argument_syntax() == 'gcc'
   luaman_cpp_args += ['-fpermissive']
