--- a/meson.build
+++ b/meson.build
@@ -142,6 +142,16 @@ else
   conf_data.set('EXEPATH', prefix/get_option('bindir'))
 endif
 
+if get_option('tracy_enable')
+  preprocessor_flags += ['-DTRACY_ENABLE']
+endif
+if get_option('tracy_callstack')
+  preprocessor_flags += ['-DTRACY_CALLSTACK=10']
+endif
+if get_option('tracy_on_demand')
+  preprocessor_flags += ['-DTRACY_ON_DEMAND']
+endif
+
 #### Platform Common External Libraries ####
 external_objects = []
 external_libs = []
