--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -38,17 +38,16 @@ on:
         type: string
         required: false
         default: "release"
-      debug_level:  # "full" | "minimal" | "release" 
+      debug_level: # "full" | "minimal" | "release"
         type: string
         required: false
         default: "release"
 
-env: 
+env:
   MESON_VERSION: "0.60.3"
 
 jobs:
   build-linux:
-
     runs-on: ubuntu-latest
     name: Linux Build
 
@@ -76,14 +75,14 @@ jobs:
           CC: "gcc"
           CXX: "g++"
         run: meson configure -Dinstall_data=false -Dinstall_runner=false -Dfmod_dir=/usr/lib/ --prefix=/usr/ build
-          
+
       - name: Build
         env:
           CC: "gcc"
           CXX: "g++"
         run: |
           meson compile -C build
-        
+
       - name: Create AppDir
         if: ${{inputs.upload_artefacts}}
         run: |
@@ -147,7 +146,7 @@ jobs:
           --bindir=Contents/MacOS \
           --prefix="/tmp/Cortex Command.app" \
           build
-          
+
       - name: Build
         env:
           CC: "gcc-12"
@@ -160,10 +159,16 @@ jobs:
         if: ${{inputs.upload_artefacts}}
         run: |
           DESTDIR="/tmp/Cortex Command.app" meson install -C build
-  
+
       - name: Tar files
-        run: tar -cvf CortexCommand.tar "/tmp/Cortex Command.app"
-      
+        if: ${{inputs.upload_artefacts}}
+        run: tar -cvf CortexCommand.tar "Cortex Command.app"
+        working-directory: /tmp/
+
+      - name: Move artefact
+        if: ${{inputs.upload_artefacts}}
+        run: cp -r /tmp/CortexCommand.tar .
+
       - name: Artifact Deploy
         if: ${{inputs.upload_artefacts}}
         uses: actions/upload-artifact@v3
@@ -176,19 +181,19 @@ jobs:
   build-windows:
     runs-on: windows-latest
     name: Windows Build
-    
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
-      
+
       - name: Install Dependencies
         run: |
           pip install meson
-      
+
       - name: Setup
         run: |
           meson setup --buildtype=${{inputs.build_type}} -Ddebug_type=${{inputs.debug_level}} --vsenv build
-      
+
       - name: Build
         run: |
           meson compile -Cbuild
