fix: debug app bundle

--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -163,6 +163,7 @@ jobs:
       - name: Tar files
         if: ${{inputs.upload_artefacts}}
         run: |
+          tree /tmp/
           cd /tmp/
           tar -cvf CortexCommand.tar "Cortex Command.app"
 
