--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -124,7 +124,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          brew install pkg-config tbb sdl2 minizip lz4 flac luajit lua@5.1 libpng gcc@12 ninja meson dylibbundler
+          brew install pkg-config tbb sdl2 minizip lz4 flac luajit lua@5.1 libpng gcc@12 ninja meson dylibbundler tree
 
       - name: Setup Meson
         env:
