fix: update mac `Info.plist` to fix resolution scaling issues

--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -18,5 +18,7 @@
 	<string>@game_version@</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>NSHighResolutionCapable</key>
+	<string>True</string>
 </dict>
 </plist>
