--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -20,5 +20,7 @@
 	<string>en</string>
 	<key>NSHighResolutionCapable</key>
 	<string>True</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.15</string>
 </dict>
 </plist>
