--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -118,6 +118,8 @@ jobs:
     runs-on: macos-11
     name: MacOS Build
         
+    env:
+      MACOSX_DEPLOYMENT_TARGET: 10.15
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
