build: update tracy static library install options
Disable install for statically linked tracy libs, remove the installed files from the macos App Bundle.

--- a/external/sources/tracy/meson.build
+++ b/external/sources/tracy/meson.build
@@ -166,7 +166,7 @@ else
     dependencies        : [ threads_dep ],
     include_directories : tracy_public_include_dirs,
     override_options    : override_options,
-    install             : true)
+    install             : false)
 endif
 
 install_headers(includes)
