--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -119,6 +119,7 @@ jobs:
     name: MacOS Build
         
     env:
+      GCC_VERSION: "13"
       MACOSX_DEPLOYMENT_TARGET: 10.15
     steps:
       - uses: actions/checkout@v3
@@ -126,12 +127,12 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          brew install pkg-config tbb sdl2 minizip lz4 flac luajit lua@5.1 libpng gcc@12 ninja meson dylibbundler tree
+          brew install pkg-config tbb sdl2 minizip lz4 flac luajit lua@5.1 libpng gcc@${{env.GCC_VERSION}} ninja meson dylibbundler tree
 
       - name: Setup Meson
         env:
-          CC: "gcc-12"
-          CXX: "g++-12"
+          CC: "gcc-${{env.GCC_VERSION}}"
+          CXX: "g++-${{env.GCC_VERSION}}"
           LDFLAGS: "-static-libgcc -static-libstdc++"
         run: |
           meson setup --buildtype=${{inputs.build_type}} -Ddebug_type=${{inputs.debug_level}} -Db_lto=false build
@@ -139,8 +140,8 @@ jobs:
       - name: Configure for App Bundle
         if: ${{inputs.upload_artefacts}}
         env:
-          CC: "gcc-12"
-          CXX: "g++-12"
+          CC: "gcc-${{env.GCC_VERSION}}"
+          CXX: "g++-${{env.GCC_VERSION}}"
           LDFLAGS: "-static-libgcc -static-libstdc++"
         run: |
           meson configure \
@@ -151,8 +152,8 @@ jobs:
 
       - name: Build
         env:
-          CC: "gcc-12"
-          CXX: "g++-12"
+          CC: "gcc-${{env.GCC_VERSION}}"
+          CXX: "g++-${{env.GCC_VERSION}}"
           LDFLAGS: "-static-libgcc -static-libstdc++"
         run: |
           meson compile -C build
