add MinimumFuel mechanic
ratio of max fuel required to begin (not keep) thrusting jetpack

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ compile_commands.json
 
 /enc_temp_folder
 
+/.idea
 /_Bin
 /NATPunchServer/Server/NATCompleteServer/Debug
 /NATPunchServer/Server/NATCompleteServer/Release
